Bug 1267499 - Fix Private Browsing start-page overflows off the window bottom. r=Gijs
MozReview-Commit-ID: F9Do3T8d7R3

UltraBlame original commit: 09139672210749d8ce25b318c444c97c34f07dfb

--- a/browser/themes/shared/privatebrowsing/aboutPrivateBrowsing.css
+++ b/browser/themes/shared/privatebrowsing/aboutPrivateBrowsing.css
@@ -303,7 +303,6 @@ width
 780px
 ;
 }
-section
 .
 section
 -
@@ -339,6 +338,22 @@ padding
 start
 :
 24px
+;
+}
+.
+section
+-
+main
+:
+last
+-
+child
+{
+margin
+-
+bottom
+:
+0
 ;
 }
 p
